Résultat de Terminal 13102018
Last login: Sat Oct 13 10:07:46 on ttys000
MacBook-Air-de-Bethleem:djangogirls bethleem$ source myvenv/activate
-bash: myvenv/activate: No such file or directory
MacBook-Air-de-Bethleem:djangogirls bethleem$ source myvenv/bin/activate
(myvenv) MacBook-Air-de-Bethleem:djangogirls bethleem$ python manage.py startapp blog
(myvenv) MacBook-Air-de-Bethleem:djangogirls bethleem$ pwd
/Users/bethleem/djangogirls
(myvenv) MacBook-Air-de-Bethleem:djangogirls bethleem$ ls
blog			manage.py		myvenv
db.sqlite3		mysite			requirements.txt
(myvenv) MacBook-Air-de-Bethleem:djangogirls bethleem$ cd blog
(myvenv) MacBook-Air-de-Bethleem:blog bethleem$ ls
__init__.py	apps.py		models.py	views.py
admin.py	migrations	tests.py
(myvenv) MacBook-Air-de-Bethleem:blog bethleem$ cd ..
(myvenv) MacBook-Air-de-Bethleem:djangogirls bethleem$ pwd
/Users/bethleem/djangogirls
(myvenv) MacBook-Air-de-Bethleem:djangogirls bethleem$ python manage.py makemigrations blog
App 'blog' could not be found. Is it in INSTALLED_APPS?
(myvenv) MacBook-Air-de-Bethleem:djangogirls bethleem$ python manage.py makemigrations blog
App 'blog' could not be found. Is it in INSTALLED_APPS?

(myvenv) MacBook-Air-de-Bethleem:djangogirls bethleem$ 
(myvenv) MacBook-Air-de-Bethleem:djangogirls bethleem$ python manage.py makemigrations blog
Traceback (most recent call last):
  File "manage.py", line 15, in <module>
    execute_from_command_line(sys.argv)
  File "/Users/bethleem/djangogirls/myvenv/lib/python3.4/site-packages/django/core/management/__init__.py", line 371, in execute_from_command_line
    utility.execute()
  File "/Users/bethleem/djangogirls/myvenv/lib/python3.4/site-packages/django/core/management/__init__.py", line 347, in execute
    django.setup()
  File "/Users/bethleem/djangogirls/myvenv/lib/python3.4/site-packages/django/__init__.py", line 24, in setup
    apps.populate(settings.INSTALLED_APPS)
  File "/Users/bethleem/djangogirls/myvenv/lib/python3.4/site-packages/django/apps/registry.py", line 112, in populate
    app_config.import_models()
  File "/Users/bethleem/djangogirls/myvenv/lib/python3.4/site-packages/django/apps/config.py", line 198, in import_models
    self.models_module = import_module(models_module_name)
  File "/Library/Frameworks/Python.framework/Versions/3.4/lib/python3.4/importlib/__init__.py", line 109, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 2254, in _gcd_import
  File "<frozen importlib._bootstrap>", line 2237, in _find_and_load
  File "<frozen importlib._bootstrap>", line 2226, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 1200, in _load_unlocked
  File "<frozen importlib._bootstrap>", line 1129, in _exec
  File "<frozen importlib._bootstrap>", line 1467, in exec_module
  File "<frozen importlib._bootstrap>", line 1572, in get_code
  File "<frozen importlib._bootstrap>", line 1532, in source_to_code
  File "<frozen importlib._bootstrap>", line 321, in _call_with_frames_removed
  File "/Users/bethleem/djangogirls/blog/models.py", line 5
    author = models.ForeignKey('auth.User', on delete=models.CASCADE)
                                                    ^
SyntaxError: invalid syntax
(myvenv) MacBook-Air-de-Bethleem:djangogirls bethleem$ python manage.py makemigrations blog
Traceback (most recent call last):
  File "manage.py", line 15, in <module>
    execute_from_command_line(sys.argv)
  File "/Users/bethleem/djangogirls/myvenv/lib/python3.4/site-packages/django/core/management/__init__.py", line 371, in execute_from_command_line
    utility.execute()
  File "/Users/bethleem/djangogirls/myvenv/lib/python3.4/site-packages/django/core/management/__init__.py", line 347, in execute
    django.setup()
  File "/Users/bethleem/djangogirls/myvenv/lib/python3.4/site-packages/django/__init__.py", line 24, in setup
    apps.populate(settings.INSTALLED_APPS)
  File "/Users/bethleem/djangogirls/myvenv/lib/python3.4/site-packages/django/apps/registry.py", line 112, in populate
    app_config.import_models()
  File "/Users/bethleem/djangogirls/myvenv/lib/python3.4/site-packages/django/apps/config.py", line 198, in import_models
    self.models_module = import_module(models_module_name)
  File "/Library/Frameworks/Python.framework/Versions/3.4/lib/python3.4/importlib/__init__.py", line 109, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 2254, in _gcd_import
  File "<frozen importlib._bootstrap>", line 2237, in _find_and_load
  File "<frozen importlib._bootstrap>", line 2226, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 1200, in _load_unlocked
  File "<frozen importlib._bootstrap>", line 1129, in _exec
  File "<frozen importlib._bootstrap>", line 1467, in exec_module
  File "<frozen importlib._bootstrap>", line 1572, in get_code
  File "<frozen importlib._bootstrap>", line 1532, in source_to_code
  File "<frozen importlib._bootstrap>", line 321, in _call_with_frames_removed
  File "/Users/bethleem/djangogirls/blog/models.py", line 17
    def__str__(self):
                    ^
SyntaxError: invalid syntax
(myvenv) MacBook-Air-de-Bethleem:djangogirls bethleem$ python manage.py makemigrations blog
Traceback (most recent call last):
  File "manage.py", line 15, in <module>
    execute_from_command_line(sys.argv)
  File "/Users/bethleem/djangogirls/myvenv/lib/python3.4/site-packages/django/core/management/__init__.py", line 371, in execute_from_command_line
    utility.execute()
  File "/Users/bethleem/djangogirls/myvenv/lib/python3.4/site-packages/django/core/management/__init__.py", line 347, in execute
    django.setup()
  File "/Users/bethleem/djangogirls/myvenv/lib/python3.4/site-packages/django/__init__.py", line 24, in setup
    apps.populate(settings.INSTALLED_APPS)
  File "/Users/bethleem/djangogirls/myvenv/lib/python3.4/site-packages/django/apps/registry.py", line 112, in populate
    app_config.import_models()
  File "/Users/bethleem/djangogirls/myvenv/lib/python3.4/site-packages/django/apps/config.py", line 198, in import_models
    self.models_module = import_module(models_module_name)
  File "/Library/Frameworks/Python.framework/Versions/3.4/lib/python3.4/importlib/__init__.py", line 109, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 2254, in _gcd_import
  File "<frozen importlib._bootstrap>", line 2237, in _find_and_load
  File "<frozen importlib._bootstrap>", line 2226, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 1200, in _load_unlocked
  File "<frozen importlib._bootstrap>", line 1129, in _exec
  File "<frozen importlib._bootstrap>", line 1471, in exec_module
  File "<frozen importlib._bootstrap>", line 321, in _call_with_frames_removed
  File "/Users/bethleem/djangogirls/blog/models.py", line 4, in <module>
    class Post(models.Model):
  File "/Users/bethleem/djangogirls/blog/models.py", line 6, in Post
    title = models.Charfield(max_length=200)
AttributeError: 'module' object has no attribute 'Charfield'
(myvenv) MacBook-Air-de-Bethleem:djangogirls bethleem$ Migrations for 'blog':python manage.py makemigrations blog
-bash: Migrations: command not found
(myvenv) MacBook-Air-de-Bethleem:djangogirls bethleem$ python manage.py makemigrations blog
Migrations for 'blog':
  blog/migrations/0001_initial.py
    - Create model Post
(myvenv) MacBook-Air-de-Bethleem:djangogirls bethleem$ 
